# give-me-a-sign

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  mqtt-autodiscovery.yml  pyproject.toml  requirements-circuitpython.txt  requirements.txt
.cursor/rules/: circuitpython.mdc
.reuse/: dep5
assets/: wifi.bmp.license
docs/: TEST_PLAN.md  conf.py  index.rst
examples/: code.py  secrets.py  settings.toml
extras/: macOS.sh
extras/fonts/: README.md  (+5 more)
give-me-a-sign/: aqi.py  clock.py  data.py  esp32spi_http_server.py  give_me_a_sign.py  greet.py  home_assistant.py  http_server.py  image.py  ip.py  message.py  mqtt.py  native_http_server.py  ntp.py  occupancy.py  platform_esp32spi.py  platform_native.py  pollen.py  server.py  splash.py  status_pixel.py  syslogger.py  tones.py  trimet.py  uv.py  weather.py
give_me_a_sign/: __init__.py  _paths.py  _version.py  aqi.py  clock.py  data.py  greet.py  home_assistant.py  http_server.py  image.py  ip.py  message.py  mqtt.py  native_http_server.py  ntp.py  nyan.py  occupancy.py  platform.py  platform_esp32spi.py  platform_native.py  pollen.py  sign.py  splash.py  status_pixel.py  syslogger.py  tones.py  trimet.py  uv.py  weather.py
tests/: conftest.py  test_aqi.sh  test_aqi_color.py  test_clock.py  test_data.py  test_data.sh  test_greet.py  test_greet.sh  test_home_assistant.py  test_info.sh  test_message.sh  test_mqtt_time.py  test_pollen.py  test_reset.sh  test_smoke.py  test_store_data.py  test_times.sh  test_timezone_offsets.sh  test_tones.py  test_tones.sh  test_uv.sh  test_weather.sh  test_weather_helpers.py
(+74 files in other folders)
